# Pixi-battle

./: .gitignore  CMakeLists.txt  README.md
include/controller/: commandController.h  mainController.h
include/factory/: effectFactory.h
include/interfaces/: fightInterface.h  lobbyInterface.h
include/manager/: achievementManager.h  classManager.h  iconManager.h  skillManager.h  userManager.h
include/model/command/: command.h
include/model/entity/: entity.h  evolutionaryFactor.h  fightState.h  monster.h  player.h  stat.h  textInformation.h
include/model/entity/skill/: skill.h  (+1 more)
include/model/fight/: participant.h  participants.h  position.h
include/model/image/: animation.h  assets.h  font.h  gif.h
include/model/user/: statistics.h  user.h
include/utility/: commandInterface.h  description.h  entityEvents.h  enums.h  randomUtility.h  timeDifference.h  utils.h
src/: main.cpp
src/controller/: commandController.cpp  mainController.cpp
src/factory/: effectFactory.cpp
src/interfaces/: fightInterface.cpp  lobbyInterface.cpp
src/manager/: achievementManager.cpp  classManager.cpp  iconManager.cpp  skillManager.cpp  userManager.cpp
src/model/command/: command.cpp
src/model/entity/: entity.cpp  evolutionaryFactor.cpp  fightState.cpp  monster.cpp  player.cpp  stat.cpp  textInformation.cpp
src/model/fight/: participant.cpp  participants.cpp  position.cpp
src/model/image/: animation.cpp  assets.cpp  gif.cpp
src/model/user/: statistics.cpp  user.cpp
src/utility/: commandInterface.cpp  description.cpp  randomUtility.cpp  timeDifference.cpp  utils.cpp
(+74 files in other folders)
